# fatcontroller

./: .coverage  .gitignore  FC_AlertManager.py  FC_DUMB.py  FC_ENTITYGROUP.py  FC_LOCAL.py  FC_SSH.py  FC_ScheduledTask.py  FC_ScheduledTaskHandler.py  FC_TELNET.py  FC_TSM.py  FC_ThreadedScheduler.py  FC_command_parser.py  FC_daemon.py  FC_daemonalert.py  FC_daemoncollector.py  FC_daemonmanager.py  FC_entity.py  FC_entitymanager.py  FC_formatter.py  FatController.py  FatControllerCommands.sav  FatControllerCore.py  README.md  TheManual.md  config.py  current_status.md  demo_commands.txt  general.sav  homelab.sav  pyproject.toml  test_output.txt  test_results.txt  verify_ssh_connection.py  verify_ssh_v2.py
code_status/: code_status.md
tests/: conftest.py  gui_acceptance_tests.md  test_command_parser.py  test_daemon_manager.py  test_entity_dumb.py  test_entity_manager.py  test_entity_subclasses.py  test_fat_controller.py  test_fc_ssh.py  test_formatter.py  test_local_entity.py  test_logging_verification.py  test_readfile_command.py  test_rhs_panel.py  test_scheduler_logic.py  test_startup_flow.py
